refactor(model): rename Records.FilmFormat to FilmFormatOption (MR 19 #20)
The DTO record Records.FilmFormat shadowed the FilmFormat enum it is
built from, which forced a fully-qualified
edens.zac.portfolio.backend.types.FilmFormat in the Records.Camera
component list.

Renames the record to FilmFormatOption, imports the enum at the top of
Records.java, and adds a FilmFormatOption.of(FilmFormat) factory so the
name/displayName mapping lives in one place instead of being repeated in
ContentControllerProd.getFilmMetadata and
CollectionService.getGeneralMetadata.

Sites updated: Records.java, GeneralMetadataDTO, ContentControllerProd,
CollectionService. Wire format is unchanged; the JSON components are
still name and displayName.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>